--- a/base/templates/base/header.html
+++ b/base/templates/base/header.html
@@ -32,7 +32,7 @@
 
               <div>
                 <span class="balance-label">Task Earnings:</span>
-                <span class="balance-amount">&#8358;{{request.user.userprofile.balance}}</span>
+                <span class="balance-amount">&#8358;{{request.user.userprofile.task_earning}}</span>
               </div>
             </div>
             
