--- a/base/templates/base/register.html
+++ b/base/templates/base/register.html
@@ -45,10 +45,10 @@
           <input type="password" name="confirm_password" placeholder="confirm your password" minlength="8" required>
         </div>
         
-        <div class="form-terms">
+        <!-- <div class="form-terms">
           <input type="checkbox" id="terms" required>
           <label for="terms">I agree to the <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a></label>
-        </div>
+        </div> -->
         
         <button type="submit" class="btn btn-primary btn-block">Create Account</button>
       </form>
