--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -42,7 +42,7 @@
       </form>
       
       <div class="auth-footer">
-        <p>Don't have an account? <a href="register.html">Sign up</a></p>
+        <p>Don't have an account? <a href=" {% url "base:register" %} ">Sign up</a></p>
       </div>
     </div>
   </div>
