--- a/base/static/style.css
+++ b/base/static/style.css
@@ -154,6 +154,7 @@ ul, ol {
   width: 100%;
   z-index: 100;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+  padding: 10px;
 }
 
 .header-content {
