--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -35,7 +35,7 @@
             <label for="remember">Remember me</label>
           </div>
           
-          <a href="#" class="forgot-password">Forgot password?</a>
+          <a href=" {% url "base:forgot_password" %} " class="forgot-password">Forgot password?</a>
         </div>
         
         <button type="submit" class="btn btn-primary btn-block">Log In</button>
