--- a/base/templates/base/password_reset_complete.html
+++ b/base/templates/base/password_reset_complete.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <main>
-    <div>
+    <div class="reset">
         <h2>Password Reset Successful</h2>
         <p>Your password has been reset. You can now log in with the new password.</p>
         <a href="{% url 'base:login' %}">Log In</a>
