--- a/base/templates/base/profile_sidebar.html
+++ b/base/templates/base/profile_sidebar.html
@@ -17,10 +17,10 @@
         <h3>Tasks Completed</h3>
         <p>{{request.user.userprofile.total_task_completed}}</p>
       </div>
-      <div class="profile-stat-item">
+      <!-- <div class="profile-stat-item">
         <h3>Current Streak</h3>
         <p>{{request.user.userprofile.streak}} days</p>
-      </div>
+      </div> -->
     </div>
     
     <div class="profile-actions">
