--- a/base/templates/base/deposit.html
+++ b/base/templates/base/deposit.html
@@ -24,7 +24,7 @@
                 {% csrf_token %}
                 <label for="amount">Amount to deposit</label><br>
                 <input type="text" name="amount"><br>
-                <button type="submit">Deposit</button>
+                <button class="start-link" type="submit">Deposit</button>
               </form>
             </div>
             <!-- <div>
