--- a/base/templates/base/profile_nav_links.html
+++ b/base/templates/base/profile_nav_links.html
@@ -3,5 +3,5 @@
     <a class="profile-tab" href="{% url "base:task-review" %}">Review Tasks</a>
     <a class="profile-tab" href="{% url "base:withdraw" %}">Withdraw</a>
     <a class="profile-tab" href="{% url "base:deposit" %}">Deposit</a>
-    <a class="profile-tab" href="{% url "base:account" %}">Account Settings</a>
+    <a class="profile-tab" href="{% url "base:account" %}">Account details</a>
 </div>
