--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -1,9 +1,10 @@
 {% extends "base/main.html" %}
-
+{% load static %}
 {% block content %}
 
 
 <main>
+  
   <!-- Hero Section -->
   <section class="hero">
     <div class="container">
@@ -146,7 +147,7 @@
     </div>
   </section>
 
-  <script src="js/main.js"></script>
+  <script src=" {% static "static/js/main.js" %} "></script>
 </main>
 
 
