--- a/base/templates/base/register.html
+++ b/base/templates/base/register.html
@@ -54,7 +54,7 @@
       </form>
       
       <div class="auth-footer">
-        <p>Already have an account? <a href="login.html">Log in</a></p>
+        <p>Already have an account? <a href="{% url "base:login" %}">Log in</a></p>
       </div>
     </div>
   </div>
