--- a/base/templates/base/profile_nav_links.html
+++ b/base/templates/base/profile_nav_links.html
@@ -1,6 +1,7 @@
 <div class="profile-tabs">
-    <a class="profile-tab" href="{% url "base:profile" %}">Task History</a>
-    <a class="profile-tab" href="{% url "base:task-review" %}">Review Tasks</a>
+    <a class="profile-tab" href="{% url "base:profile" %}">Job History</a>
+    <a class="profile-tab" href="{% url "base:task-review" %}">Review Jobs</a>
+    <a class="profile-tab" href="{% url "base:task-views" %}">Your Jobs</a>
     <a class="profile-tab" href="{% url "base:withdraw" %}">Withdraw</a>
     <a class="profile-tab" href="{% url "base:deposit" %}">Deposit</a>
     <a class="profile-tab" href="{% url "base:account" %}">Account details</a>
