--- a/base/templates/base/deposit.html
+++ b/base/templates/base/deposit.html
@@ -24,6 +24,7 @@
                 {% csrf_token %}
                 <label for="amount">Amount to deposit</label><br>
                 <input type="text" name="amount"><br>
+                <small>minimum amount is &#8358;500</small> <br>
                 <button class="start-link" type="submit">Deposit</button>
               </form>
             </div>
