--- a/base/templates/base/mobile_navbar.html
+++ b/base/templates/base/mobile_navbar.html
@@ -33,7 +33,7 @@
               <a href=" {% url "base:home" %} " > Home </a> <br> 
           </div>
           <div class="nav-text-container">
-              <a href="{% url "base:dashboard" %}">Register</a><br> 
+              <a href="{% url "base:register" %}">Register</a><br> 
           </div>
           <div class="nav-text-container">
               <a href="{% url "base:create-task" %}">Login</a> 
