--- a/base/templates/base/profile_nav_links.html
+++ b/base/templates/base/profile_nav_links.html
@@ -4,5 +4,7 @@
     <a class="profile-tab" href="{% url "base:task-views" %}">Your Jobs</a>
     <a class="profile-tab" href="{% url "base:withdraw" %}">Withdraw</a>
     <a class="profile-tab" href="{% url "base:deposit" %}">Deposit</a>
-    <a class="profile-tab" href="{% url "base:account" %}">Account details</a>
+    <a class="profile-tab" href="{% url "base:mobile_top_up" %}">Airtime & Data</a>
+    <a class="profile-tab" href="{% url "base:account" %}">Account</a>
+    <a class="profile-tab" href="{% url "base:renew-sub" %}">renew subscription</a>
 </div>
