--- a/base/templates/base/dashboard.html
+++ b/base/templates/base/dashboard.html
@@ -4,12 +4,17 @@
 
 {% block content %}
 
-  <!-- Dashboard Content -->
+  <!-- Dashboard Content --> 
   <main class="dashboard">
     <div class="container">
       <div class="dashboard-text-container">
-        <h1 class="page-title">Dashboard</h1>
-        <h3>Welcome {{request.user.email.capitalize}} </h3>
+        <div>
+          <h1 class="page-title">Dashboard</h1>
+          <h4>Welcome {{request.user.email.capitalize}} </h4>
+        </div>
+        <div>
+          <span class="referal-code">Your referal code: {{request.user.userprofile.referral_code}}</span>
+        </div>
       </div>
       
       <!-- Stats -->
