--- a/base/templates/base/register.html
+++ b/base/templates/base/register.html
@@ -44,6 +44,11 @@
           <label for="password">Confirm Password</label>
           <input type="password" name="confirm_password" placeholder="confirm your password" minlength="8" required>
         </div>
+
+        <div class="form-group">
+          <label for="password">Referal Code (optional) </label>
+          <input type="text" name="referal_code" placeholder="enter your referal code">
+        </div>
         
         <!-- <div class="form-terms">
           <input type="checkbox" id="terms" required>
