--- a/base/templates/base/withdraw.html
+++ b/base/templates/base/withdraw.html
@@ -16,7 +16,7 @@
         
         <div>
           <div class="profile-tab-content" id="payments">
-          <h2>Requet Withdrawal</h2>
+            <h2>Request Withdrawal</h2>
 
             <div class="earning-transfer">
               <h4>Transfer for Task Earning to Wallet</h4>
@@ -30,40 +30,40 @@
             </div>
 
 
-          <div class="payment-history">
-            <div class="payment-history-item">
-              <form action="" method="POST">
-                {% csrf_token %}
-                <label for="amount">Amount to withdraw</label><br>
-                <input type="hidden" name="action" value="withdraw">
-                <input type="text" name="amount"><br>
-                <small>NOTE: minimum wiithdrawal is &#8358;5,000</small><br>
-                <input class="start-link" type="submit" name="withdraw" value="Request Withdrawal"><br>
-              </form>
-            </div>
-            <div>
-              <h3>Withdrawal History</h3>
-              {% for withdraw in withdraws %}
-              {% if withdraw.user == request.user %}
-              <div class="withdraw-wrapper">
-                <div class="amount-container">
-                  <h4>&#8358;{{withdraw.amount}}</h4>
-                  <h5>{{withdraw.requested_at | time}}</h5>
-                </div>
-                <div>
-                  {% if withdraw.status == pending %}
-                  <h5  class="status-pending"> {{withdraw.status}} </h5>
-                  {% else %}
-                  <h5  class="status-completed"> {{withdraw.status}} </h5>
-                  {% endif %}
-                </div>
+            <div class="payment-history">
+              <div class="payment-history-item">
+                <form action="" method="POST">
+                  {% csrf_token %}
+                  <label for="amount">Amount to withdraw</label><br>
+                  <input type="hidden" name="action" value="withdraw">
+                  <input type="text" name="amount"><br>
+                  <small>NOTE: minimum wiithdrawal is &#8358;5,000</small><br>
+                  <input class="start-link" type="submit" name="withdraw" value="Request Withdrawal"><br>
+                </form>
               </div>
-              {% endif %}
-              
-              {% endfor %}
+              <div>
+                <h3>Withdrawal History</h3>
+                {% for withdraw in withdraws %}
+                {% if withdraw.user == request.user %}
+                <div class="withdraw-wrapper">
+                  <div class="amount-container">
+                    <h4>&#8358;{{withdraw.amount}}</h4>
+                    <span>{{withdraw.requested_at | timesince}} ago</span>
+                  </div>
+                  <div>
+                    {% if withdraw.status == pending %}
+                    <h5  class="status-pending"> {{withdraw.status}} </h5>
+                    {% else %}
+                    <h5  class="status-completed"> {{withdraw.status}} </h5>
+                    {% endif %}
+                  </div>
+                </div>
+                {% endif %}
+                
+                {% endfor %}
+              </div>
             </div>
           </div>
-        </div>
         </div>
       </div>
     </div>
